turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:17: error: ']' expected but '(' found.
    var rule:Array[Array[Array[Int](3)](2)](2) = null // Change this
                                   ^Turmite:17: error: ']' expected but '(' found.
    var rule:Array[Array[Array[Int](3)](2)](2) = null // Change this
                                       ^Turmite:17: error: ';' expected but '(' found.
    var rule:Array[Array[Array[Int](3)](2)](2) = null // Change this
                                           ^